--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "resume",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "resume"
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^16.11.36",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "ejs": "^3.1.8"
   }
 }
